syntax = "proto3";

package rivet.backend.pkg.dynamic_servers.server_delete;

import "proto/common.proto";

message Request {
    rivet.common.Uuid server_id = 1;
    int64 override_kill_timeout_ms = 2;
}

message Response {
    rivet.common.Uuid server_id = 1;
}
